objects/Danfoss_Tactics__c.object
<CustomObject>
    <description>Used for adding Strategies, Tactics and Actions to Account Plans</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Strategy and Tactics</relationshipLabel>
        <relationshipName>Strategy_and_Tactics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actions__c</fullName>
        <description>Acount Plan Actions</description>
        <inlineHelpText>Acount Plan Actions</inlineHelpText>
        <label>Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Back_to_Account_Plan__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back to Account Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Strategy__c</fullName>
        <description>Customer Strategy</description>
        <inlineHelpText>Customer Strategy</inlineHelpText>
        <label>Customer Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Danfoss_Strategy__c</fullName>
        <description>Danfoss Strategy</description>
        <inlineHelpText>Danfoss Strategy</inlineHelpText>
        <label>Danfoss Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Not Used</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Not Used</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tactics__c</fullName>
        <description>Tactics</description>
        <inlineHelpText>Tactics</inlineHelpText>
        <label>Tactics</label>
        <type>TextArea</type>
    </fields>
    <label>Strategy and Tactics</label>
    <nameField>
        <label>Danfoss Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategy and Tactics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>